# myQtQuickProject

./: CMakeLists.txt  README.md  main.cpp
MyQmlModule/: Home.qml  HomeForm.ui.qml  Main.qml  MyQmlModule.qmlproject  MyQmlModule.qmlproject.qtds  Page1Form.ui.qml  Page2Form.ui.qml  qml.qrc
MyQmlModule/imports/QtQuick/Studio/Components/: ArcItem.qml  PieItem.qml  SvgPathItem.qml
MyQmlModule/imports/QtQuick/Studio/Components/designer/: SvgPathItemSpecifics.qml
myQmlModule/: Home.qml  HomeForm.ui.qml  Main.qml  main.qml  main.qmlproject  main.qmlproject.qtds  qml.qrc
myQmlModule/imports/QtQuick/Studio/Components/: TriangleItem.qml
